--- a/index.html
+++ b/index.html
@@ -5,57 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor f News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
-
-  Home
-  New
-  Popular
-
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="div1">
+      <div class="logo">
+        <img src="./assets/images/logo.svg" alt="">
+      </div>
+      <div class="menu">
+          <div class="Home">
+            <a href="" id="txt">Home</a>
+          </div>
+          <div class="New">
+            <a href="" id="txt">New</a>
+          </div>
+          <div class="Popular">
+            <a href="" id="txt">Popular</a>
+          </div>
+          <div class="Trending">
+            <a href="" id="txt">Trending</a>
+          </div>
+          <div class="Categories">
+            <a href="" id="txt">Categories </a>
+          </div>
+      </div>
+    </div>
+    <div class="div2">
+      <div class="div21">
+        <div class="logo_img">
+          <img src="./assets/images/image-web-3-desktop.jpg" alt="" style="height: 300px; width: 960px;">
+        </div>
+        <div class="texte">
+          <div class="question">
+            <h1>The Bright Future of Web 3.0?</h1>
+          </div>
+          <div class="description">
+              <div class="texte_description">
+                We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?
+              </div>
+              <div class="read_more">
+                <button type="button" class="button"><h3 class="p">READ</h3> <h3 class="p">MORE</h3></button>
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="div22">
+        <div class="new">
+          <h1>New</h1>
+        </div>
+        <div class="hydrogen">
+          <div class="title">
+            <a href="" id="link"><h5>Hydrogen VS Electric Cars</h5></a>
+          </div>
+          <div class="more">
+            Will hydrogen-fueled cars ever catch up to EVs?
+          </div>
+        </div>
+        <div class="artistry">
+          <div class="title">
+            <a href="" id="link"><h5>The Downsides of AI Artustry</h5></a>
+          </div>
+          <div class="more">
+            What are the possible adverse effects of on-demand AI image generation?
+          </div>
+        </div>
+        <div class="VC">
+          <div class="title">
+            <a href="" id="link"><h5>Is VC Funding Drying Up?</h5></a>
+          </div>
+          <div class="more">
+            Private funding by VC firms is down 50% YOY. We take a look at what that means.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="div3">
+      <div class="categorie1">
+        <div class="img">
+          <img src="./assets/images/image-retro-pcs.jpg" class="img" alt="">
+        </div>
+        <div class="Laptops">
+          <div class="number"><h2>01</h2></div>
+          <div class="title"><a href="" class="title"><h2>Reviving Retro PCs</h2></a></div>
+          <div class="details">What happens when old PCs are given modern upgrades?</div>
+        </div>
+      </div>
+      <div class="categorie2">
+          <div class="img">
+            <img src="./assets/images/image-top-laptops.jpg" class="img" alt="">
+          </div>
+          <div class="Laptops">
+            <div class="number"><h2>02</h2></div>
+            <div class="title"><a href="" class="title"><h2>Top 10 Laptops of 2022</h2></a></div>
+            <div class="details">Our best picks for various needs and budgets.</div>
+          </div>
+      </div>
+      <div class="categorie3">
+          <div class="img">
+            <img src="./assets/images/image-gaming-growth.jpg" class="img" alt="">
+          </div>
+          <div class="Laptops">
+            <div class="number"><h2>03</h2></div>
+            <div class="title"><a href="" class="title"><h2>The Growth of Gaming</h2></a></div>
+            <div class="details">How the pandemic has sparked fresh opportunities.</div>
+          </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
