desktop version done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="div1">
       <div class="logo">
-        <img src="./assets/images/logo.svg" alt="">
+        <img src="./assets/images/logo.svg" alt="" style="width: 100px; height: auto;">
       </div>
       <div class="menu">
           <div class="Home">
@@ -43,7 +43,7 @@
     <div class="div2">
       <div class="div21">
         <div class="logo_img">
-          <img src="./assets/images/image-web-3-desktop.jpg" alt="" style="height: 300px; width: 960px;">
+          <img src="./assets/images/image-web-3-desktop.jpg" alt="" style="height: auto; width: 1240px;">
         </div>
         <div class="texte">
           <div class="question">
@@ -54,7 +54,7 @@
                 We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?
               </div>
               <div class="read_more">
-                <button type="button" class="button"><h3 class="p">READ</h3> <h3 class="p">MORE</h3></button>
+                <button type="button" class="button"><p class="p">READ</p> <p class="p">MORE</p></button>
               </div>
           </div>
         </div>
@@ -64,7 +64,7 @@
           <h1>New</h1>
         </div>
         <div class="hydrogen">
-          <div class="title">
+          <div class="title1">
             <a href="" id="link"><h5>Hydrogen VS Electric Cars</h5></a>
           </div>
           <div class="more">
@@ -72,15 +72,15 @@
           </div>
         </div>
         <div class="artistry">
-          <div class="title">
-            <a href="" id="link"><h5>The Downsides of AI Artustry</h5></a>
+          <div class="title1">
+            <a href="" id="link"><h5>The Downsides of AI Artistry</h5></a>
           </div>
           <div class="more">
             What are the possible adverse effects of on-demand AI image generation?
           </div>
         </div>
         <div class="VC">
-          <div class="title">
+          <div class="title1">
             <a href="" id="link"><h5>Is VC Funding Drying Up?</h5></a>
           </div>
           <div class="more">
@@ -95,8 +95,8 @@
           <img src="./assets/images/image-retro-pcs.jpg" class="img" alt="">
         </div>
         <div class="Laptops">
-          <div class="number"><h2>01</h2></div>
-          <div class="title"><a href="" class="title"><h2>Reviving Retro PCs</h2></a></div>
+          <div class="number"><h2 class="h2">01</h2></div>
+          <div class="title"><a href="" class="title"><h2 class="h2_title">Reviving Retro PCs</h2></a></div>
           <div class="details">What happens when old PCs are given modern upgrades?</div>
         </div>
       </div>
@@ -105,8 +105,8 @@
             <img src="./assets/images/image-top-laptops.jpg" class="img" alt="">
           </div>
           <div class="Laptops">
-            <div class="number"><h2>02</h2></div>
-            <div class="title"><a href="" class="title"><h2>Top 10 Laptops of 2022</h2></a></div>
+            <div class="number"><h2 class="h2">02</h2></div>
+            <div class="title"><a href="" class="title"><h2 class="h2_title">Top 10 Laptops of 2022</h2></a></div>
             <div class="details">Our best picks for various needs and budgets.</div>
           </div>
       </div>
@@ -115,8 +115,8 @@
             <img src="./assets/images/image-gaming-growth.jpg" class="img" alt="">
           </div>
           <div class="Laptops">
-            <div class="number"><h2>03</h2></div>
-            <div class="title"><a href="" class="title"><h2>The Growth of Gaming</h2></a></div>
+            <div class="number"><h2 class="h2">03</h2></div>
+            <div class="title"><a href="" class="title"><h2 class="h2_title">The Growth of Gaming</h2></a></div>
             <div class="details">How the pandemic has sparked fresh opportunities.</div>
           </div>
       </div>
